--- a/en/docs/catalogs/devportal-api.yaml
+++ b/en/docs/catalogs/devportal-api.yaml
@@ -66,7 +66,7 @@ info:
     Following is the format of the request if you are using the password grant type.
     ```
     curl -k -d "grant_type=password&username=<admin_username>&password=<admin_password>&scope=<scopes separated by space>"
-    \ -H "Authorization: Basic base64(cliet_id:client_secret)"
+    \ -H "Authorization: Basic base64(client_id:client_secret)"
     \ https://<host>:<servlet_port>/oauth2/token
     ```
     **Sample request**
@@ -150,7 +150,7 @@ paths:
             **property_name:property_value**
 
             Eg.
-            "environment:test" where environment is the property name and test is the propert value.
+            "environment:test" where environment is the property name and test is the property value.
 
             If no advanced attribute modifier has been specified, search will match the
             given query string against API Name.
@@ -181,7 +181,7 @@ paths:
       summary: |
         Get Details of an API
       description: |
-        Using this operation, you can retrieve complete details of a single API. You need to provide the Id of the API to retrive it.
+        Using this operation, you can retrieve complete details of a single API. You need to provide the Id of the API to retrieve it.
 
         **NOTE:**
         * This operation does not require an Authorization header by default. But if it is provided, it will be validated and checked for permissions of the user, hence you may be able to see APIs which are restricted for special permissions/roles. \n
@@ -248,7 +248,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests.
               schema:
                 type: string
@@ -333,7 +333,7 @@ paths:
       summary: |
         Get a List of Documents of an API
       description: |
-        This operation can be used to retrive a list of documents belonging to an API by providing the id of the API.
+        This operation can be used to retrieve a list of documents belonging to an API by providing the id of the API.
 
         **NOTE:**
         * This operation does not require an Authorization header by default. But in order to see a restricted API's documents, you need to provide Authorization header.
@@ -431,7 +431,7 @@ paths:
       summary: |
         Get the Content of an API Document
       description: |
-        This operation can be used to retrive the content of an API's document.
+        This operation can be used to retrieve the content of an API's document.
 
         The document can be of 3 types. In each cases responses are different.
 
@@ -440,7 +440,7 @@ paths:
         2. **FILE type**:
            The file will be downloaded with the related content type (eg. `application/pdf`)
         3. **URL type**:
-            The client will recieve the URL of the document as the Location header with the response with - `303 See Other`
+            The client will receive the URL of the document as the Location header with the response with - `303 See Other`
 
 
         **NOTE:**
@@ -464,7 +464,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests.
               schema:
                 type: string
@@ -472,7 +472,7 @@ paths:
         303:
           description: |
             See Other.
-            Source can be retrived from the URL specified at the Location header.
+            Source can be retrieved from the URL specified at the Location header.
           headers:
             Location:
               description: |
@@ -524,7 +524,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests (Will be supported in future).
               schema:
                 type: string
@@ -833,7 +833,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests.
               schema:
                 type: string
@@ -1000,7 +1000,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests.
               schema:
                 type: string
@@ -1027,7 +1027,7 @@ paths:
       tags:
         - Topics
       summary: |
-        Get a list of available topics for a given async API
+        Get a list of available topics for a given Async API
       description: |
         This operation will provide a list of topics available for a given Async API, based on the provided API ID.
       parameters:
@@ -1087,7 +1087,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests.
               schema:
                 type: string
@@ -1282,7 +1282,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests.
               schema:
                 type: string
@@ -1314,7 +1314,7 @@ paths:
       summary: |
         Update an Application
       description: |
-        This operation can be used to update an application. Upon succesfull you will retrieve the updated application as the response.
+        This operation can be used to update an application. Upon successful you will retrieve the updated application as the response.
       parameters:
         - $ref: '#/components/parameters/applicationId'
         - $ref: '#/components/parameters/If-Match'
@@ -1339,7 +1339,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests.
               schema:
                 type: string
@@ -1572,7 +1572,7 @@ paths:
       summary: |
         Update Grant Types and Callback Url of an Application
       description: |
-        This operation can be used to update grant types and callback url of an application. (Consumer Key and Consumer Secret are ignored) Upon succesfull you will retrieve the updated key details as the response.
+        This operation can be used to update grant types and callback url of an application. (Consumer Key and Consumer Secret are ignored) Upon successful you will retrieve the updated key details as the response.
       parameters:
         - $ref: '#/components/parameters/applicationId'
         - $ref: '#/components/parameters/keyType'
@@ -1634,7 +1634,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests (Will be supported in future).‚
               schema:
                 type: string
@@ -1816,7 +1816,7 @@ paths:
       summary: |
         Update Grant Types and Callback URL of an Application
       description: |
-        This operation can be used to update grant types and callback url of an application. (Consumer Key and Consumer Secret are ignored) Upon succesfull you will retrieve the updated key details as the response.
+        This operation can be used to update grant types and callback url of an application. (Consumer Key and Consumer Secret are ignored) Upon successful you will retrieve the updated key details as the response.
       parameters:
         - $ref: '#/components/parameters/applicationId'
         - $ref: '#/components/parameters/keyMappingId'
@@ -1877,7 +1877,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests (Will be supported in future).‚
               schema:
                 type: string
@@ -2479,8 +2479,8 @@ paths:
               schema:
                 type: string
             Last-Modified:
-              description: Date and time the resource has been modifed the last time.
-                Used by caches, or in conditional reuquests.
+              description: Date and time the resource has been modified the last time.
+                Used by caches, or in conditional requests.
               schema:
                 type: string
           content:
@@ -2751,7 +2751,7 @@ paths:
                 type: string
             Last-Modified:
               description: |
-                Date and time the resource has been modifed the last time.
+                Date and time the resource has been modified the last time.
                 Used by caches, or in conditional requests.
               schema:
                 type: string
@@ -2961,7 +2961,7 @@ paths:
     get:
       tags:
         - Settings
-      summary: Retreive Developer Portal settings
+      summary: Retrieve Developer Portal settings
       description: |
         Retreive Developer Portal settings
       parameters:
@@ -3474,7 +3474,7 @@ components:
           example: A calculator API that supports basic operations
         context:
           type: string
-          description: A string that represents thecontext of the user's request
+          description: A string that represents the context of the user's request
           example: CalculatorAPI
         version:
           type: string
@@ -3489,7 +3489,7 @@ components:
           type: string
           description: |
             Swagger definition of the API which contains details about URI templates and scopes
-          example: '{"paths":{"\/substract":{"get":{"x-auth-type":"Application & Application
+          example: '{"paths":{"\/subtract":{"get":{"x-auth-type":"Application & Application
             User","x-throttling-tier":"Unlimited","parameters":[{"name":"x","required":true,"type":"string","in":"query"},{"name":"y","required":true,"type":"string","in":"query"}],"responses":{"200":{}}}},"\/add":{"get":{"x-auth-type":"Application
             & Application User","x-throttling-tier":"Unlimited","parameters":[{"name":"x","required":true,"type":"string","in":"query"},{"name":"y","required":true,"type":"string","in":"query"}],"responses":{"200":{}}}}},"swagger":"2.0","info":{"title":"CalculatorAPI","version":"1.0.0"}}'
         wsdlUri:
@@ -3542,7 +3542,7 @@ components:
           type: array
           description: Search keywords related to the API
           example:
-            - substract
+            - subtract
             - add
           items:
             type: string
@@ -3703,7 +3703,7 @@ components:
         asyncTransportProtocols:
           type: array
           description: |
-            Supported transports for the aync API.
+            Supported transports for the Async API.
           example:
             - http
             - mqtt
@@ -3968,7 +3968,7 @@ components:
           example: 50
         dataUnit:
           description: |
-            Unit of data allowed to be transfered. Allowed values are "KB", "MB" and "GB"
+            Unit of data allowed to be transferred. Allowed values are "KB", "MB" and "GB"
           type: string
           example: KB
         unitTime:
@@ -4005,7 +4005,7 @@ components:
         stopOnQuotaReach:
           type: boolean
           description: |
-            If this attribute is set to false, you are capabale of sending requests
+            If this attribute is set to false, you are capable of sending requests
             even if the request count exceeded within a unit time
           example: true
         monetizationAttributes:
@@ -4336,7 +4336,7 @@ components:
           example: 1.2345678901234568E30
         tokenScopes:
           type: array
-          description: Valid comma seperated scopes for the access token
+          description: Valid comma separated scopes for the access token
           example:
             - default
             - read_api
@@ -4429,7 +4429,7 @@ components:
       properties:
         consumerKey:
           type: string
-          description: The consumer key associated with the application, used to indetify
+          description: The consumer key associated with the application, used to identify
             the client
           example: vYDoc9s7IgAFdkSyNDaswBX7ejoa
         consumerSecret:
@@ -4781,7 +4781,7 @@ components:
             provider:
               type: string
               description: |
-                If the provider value is notgiven, the user invoking the API will be used as the provider.
+                If the provider value is not given, the user invoking the API will be used as the provider.
               example: admin
             status:
               type: string
@@ -4934,7 +4934,7 @@ components:
           default: true
         userStorePasswordPattern:
           type: string
-          description: The 'PasswordJavaRegEx' cofigured in the UserStoreManager
+          description: The 'PasswordJavaRegEx' configured in the UserStoreManager
           example: "^[\\S]{5,30}$"
         passwordPolicyPattern:
           type: string
@@ -5294,7 +5294,7 @@ components:
           items:
             type: string
     CurrentAndNewPasswords:
-      title: Current and new passowrd of the user
+      title: Current and new password of the user
       type: object
       properties:
         currentPassword:
@@ -5363,7 +5363,7 @@ components:
                   properties:
                     protocol:
                       type: string
-                      example: Defalt
+                      example: Default
                     endpointURL:
                       type: string
                       example: Default
@@ -5493,7 +5493,7 @@ components:
       in: query
       required: false
       description: |
-        ID of the perent comment.
+        ID of the parent comment.
       schema:
         type: string
     requestedTenant:
@@ -5509,7 +5509,7 @@ components:
       in: query
       required: false
       description: |
-        Whether we need to display commentor details.
+        Whether we need to display commenter details.
       schema:
         type: boolean
         default : false
@@ -5706,7 +5706,7 @@ components:
       in: header
       description: |
         Validator for conditional requests; based on the ETag of the formerly retrieved
-        variant of the resourec.
+        variant of the resource.
       schema:
         type: string
     If-Match:
