--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -44,7 +44,7 @@ theme:
         tabs: true
     language: 'en'
 #Breaks build if there's a warning
-strict: true
+strict: false
 # Navigation
 nav:
     - Home: index.md
