--- a/en/docs/catalogs/runtime-api.yaml
+++ b/en/docs/catalogs/runtime-api.yaml
@@ -90,6 +90,11 @@ paths:
           $ref: "#/components/responses/InternalServerError"
         "400":
           $ref: "#/components/responses/BadRequest"
+      x-code-samples:
+        - lang: Curl
+          source: 'curl -k -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
+          -H "Host: api.am.wso2.com" "https://api.am.wso2.com:9095/api/am/runtime/apis"'
+
     post:
       tags:
         - APIs
@@ -133,6 +138,14 @@ paths:
           $ref: "#/components/responses/BadRequest"
         "500":
           $ref: "#/components/responses/InternalServerError"
+      x-code-samples:
+        - lang: Curl
+          source: 'curl -k -X POST -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
+          -H "Content-Type: application/json" 
+          -H "Accept: application/json" 
+          -H "Host: api.am.wso2.com" -d @data.json
+          "https://api.am.wso2.com:9095/api/am/runtime/apis"'
+
   /apis/{apiId}:
     get:
       tags:
@@ -172,6 +185,11 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/InternalServerError"
+      x-code-samples:
+        - lang: Curl
+          source: 'curl -k -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
+          "https://api.am.wso2.com:9095/api/am/runtime/apis/01234567-0123-0123-0123-012345678901"'
+
     put:
       tags:
         - APIs
@@ -231,6 +249,11 @@ paths:
 
         "500":
           $ref: "#/components/responses/InternalServerError"
+
+      x-code-samples:
+        - lang: Curl
+          source: 'curl -k -X PUT -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8" -H "Content-Type: application/json" -d @data.json
+                "https://api.am.wso2.com:9095/api/am/runtime/apis/01234567-0123-0123-0123-012345678901"'    
     delete:
       tags:
         - APIs
@@ -260,11 +283,16 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/InternalServerError"
+          x-code-samples:
+            - lang: Curl
+              source: 'curl -k -X DELETE -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
+                    "https://api.am.wso2.com:9095/api/am/runtime/apis/01234567-0123-0123-0123-012345678901"' 
+
   /apis/{apiId}/generate-key:
     post:
       tags:
         - APIs
-      summary: Generate internal API Key to invoke APIS.
+      summary: Generate internal API Key to invoke APIS
       description: |
         This operation can be used to generate internal API key which used to invoke API.
       operationId: generateInternalAPIKey
@@ -287,6 +315,14 @@ paths:
           $ref: "#/components/responses/Forbidden"
         "500":
           $ref: "#/components/responses/InternalServerError"
+      x-code-samples:
+        - lang: Curl
+          source: 'curl -k -X POST "https://api.am.wso2.com:9095/api/am/runtime/apis/01234567-0123-0123-0123-012345678901/generate-key" 
+          -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8" 
+          -H "Content-Type: application/json" 
+          -H "Accept: application/json" 
+          -H "Host: api.am.wso2.com"'
+
   /apis/import-service:
     post:
       tags:
@@ -524,6 +560,10 @@ paths:
 
         "500":
           $ref: "#/components/responses/InternalServerError"
+      x-code-samples:
+        - lang: Curl
+          source: 'curl -k -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
+          "https://api.am.wso2.com:9095/api/am/runtime/apis/01234567-0123-0123-0123-012345678901/definition"'
     put:
       tags:
         - APIs
@@ -582,6 +622,10 @@ paths:
 
         "500":
           $ref: "#/components/responses/InternalServerError"
+      x-code-samples:
+        - lang: Curl
+          source: 'curl -k -X PUT -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8" -H "Content-Type: application/json" -d @data.json
+                "https://api.am.wso2.com:9095/api/am/runtime/apis/01234567-0123-0123-0123-012345678901/definition"'
   /apis/export:
     get:
       tags:
@@ -809,7 +853,12 @@ paths:
         "400":
           $ref: "#/components/responses/BadRequest"
         "500":
-          $ref: "#/components/responses/InternalServerError"
+          $ref: "#/components/responses/InternalServerError" 
+      x-code-samples:
+        - lang: Curl
+          source: 'curl -k -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
+          "https://api.am.wso2.com:9095/api/am/runtime/services"'
+
   /services/{serviceId}:
     get:
       tags:
@@ -841,6 +890,7 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/InternalServerError"
+
   /services/{serviceId}/usage:
     get:
       tags:
