Updated based on feedback

--- a/en/docs/catalogs/runtime-api.yaml
+++ b/en/docs/catalogs/runtime-api.yaml
@@ -649,7 +649,7 @@ paths:
         - lang: Curl
           source: 'curl -k -X PUT -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
           -H "Content-Type: application/json" 
-          -d @data.json
+          -F apiDefinition=@swagger.json
           "https://api.am.wso2.com:9095/api/am/runtime/apis/01234567-0123-0123-0123-012345678901/definition"'
   /apis/export:
     get:
