--- a/en/docs/catalogs/runtime-api.yaml
+++ b/en/docs/catalogs/runtime-api.yaml
@@ -432,8 +432,7 @@ paths:
         - lang: Curl
           source: 'curl -k -X POST "https://api.am.wso2.com:9095/api/am/runtime/apis/import-definition" 
           -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8" 
-          -H "Content-Type: application/json" 
-          -H "Accept: application/json" 
+          -H "Content-Type: multipart/form-data" 
           -F file=@openapi.json -F additionalProperties=@data.json'
   
   /apis/validate-definition:
@@ -488,8 +487,7 @@ paths:
       x-code-samples:
         - lang: Curl
           source: 'curl -k -X POST -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
-          -H "Content-Type: application/json"
-          -H "Accept: application/json"
+          -H "Content-Type: multipart/form-data"
           -F file=@openapi.json "https://api.am.wso2.com:9095/api/am/runtime/apis/validate-definition"'
 
   /apis/validate:
@@ -649,7 +647,7 @@ paths:
       x-code-samples:
         - lang: Curl
           source: 'curl -k -X PUT -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
-          -H "Content-Type: application/json" 
+          -H "Content-Type: multipart/form-data"
           -F apiDefinition=@oaspecification.json
           "https://api.am.wso2.com:9095/api/am/runtime/apis/01234567-0123-0123-0123-012345678901/definition"'
   /apis/export:
@@ -766,6 +764,7 @@ paths:
       x-code-samples:
         - lang: Curl
           source: 'curl -k -X POST -H "Authorization: Bearer ae4eae22-3f65-387b-a171-d37eaa366fa8"
+          -H "Content-Type: multipart/form-data"
           -F file=@admin-PizzaShackAPI-1.0.0.zip 
           "https://api.am.wso2.com:9095/api/am/runtime/apis/import?preserveProvider=false&overwrite=false"'
 
